--- a/balloon.html
+++ b/balloon.html
@@ -2,64 +2,58 @@
 <html>
 <head>
   <style>
-    @keyframes fly {
-      from { top: 400px; }
-      to { top: 0px; }
-    }
-    .circle {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      position: absolute;
+    @keyframes float {
+      0% { transform: translateY(700px); }
+      25% { transform: translateY(500px); }
+      50% { transform: translateY(300px); }
+      75% { transform: translateY(500px); }
+      100% { transform: translateY(700px); }
     }
   </style>
 </head>
 <body>
   <script>
-    const balloons = [];
-    const minDistance = 120;
+    class Balloon {
+      constructor(id, color, diameter, speed) {
+        this.id = id;
+        this.color = color;
+        this.diameter = diameter;
+        this.speed = speed;
+      }
 
-    function createBalloon() {
-      const balloon = document.createElement('div');
-      balloon.className = 'circle';
-      balloon.style.backgroundColor = getRandomColor();
+      make() {
+        const dv = document.createElement('div');
+        dv.id = 'd' + this.id;
+        dv.style.cssText = `
+          width: ${this.diameter}px;
+          height: ${this.diameter}px;
+          border-radius: ${this.diameter / 2}px;
+          background-color: ${this.color};
+          position: absolute;
+          transform: translateY(700px);
+          left: ${Math.random() * (window.innerWidth - this.diameter)}px;
+        `;
+        document.body.appendChild(dv);
+      }
 
-      let left;
-      let tries = 0;
-      do {
-        left = Math.random() * (window.innerWidth - 100);
-        tries++;
-        if (tries > 20) break;
-      } while (balloons.some(b => Math.abs(parseFloat(b.style.left) - left) < minDistance));
-
-      balloon.style.left = `${left}px`;
-      balloon.style.top = '400px';
-
-      const duration = Math.random() * 6 + 5;
-      balloon.style.animation = `fly ${duration}s linear`;
-
-      document.body.appendChild(balloon);
-      balloons.push(balloon);
+      float() {
+        const dv = document.getElementById('d' + this.id);
+        dv.style.animationName = "float";
+        dv.style.animationDuration = (10 / this.speed) + 's';
+        dv.style.animationIterationCount = "infinite";
+        dv.style.animationTimingFunction = "ease-in-out";
+      }
     }
 
-    function getRandomColor() {
-      return `#${Math.floor(Math.random() * 16777215).toString(16).padStart(6, '0')}`;
+    const colors = ['red', 'blue', 'green', 'yellow', 'purple', 'orange', 'pink', 'cyan', 'magenta', 'lime'];
+    for (let i = 0; i < 30; i++) {
+      const color = colors[Math.floor(Math.random() * colors.length)];
+      const diameter = 50 + Math.random() * 100;
+      const speed = 0.5 + Math.random();
+      const b = new Balloon(i, color, diameter, speed);
+      b.make();
+      setTimeout(() => b.float(), i * 200);
     }
-
-    for (let i = 0; i < 10; i++) {
-      createBalloon();
-    }
-
-    setInterval(() => {
-      balloons.forEach(balloon => {
-        const size = Math.random() * 50 + 50;
-        Object.assign(balloon.style, {
-          width: `${size}px`,
-          height: `${size}px`,
-          backgroundColor: getRandomColor()
-        });
-      });
-    }, 1000);
   </script>
 </body>
 </html>
